feat: update swagger json
